# gsh-framework

./: .gitignore  ADOPTERS.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  GSH_Framework_Whitepaper.md  LICENSE  README.md  SECURITY.md  hunt-002-ddi-tunneling-anomaly.md  hunt-003-model-poisoning-baseline.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  general_enhancement.md  integration_adapter.md  new_playbook_proposal.md  threshold_refinement.md
.github/workflows/: ci.yml
adapters/: __init__.py  elastic_bulk.py  langchain_callback.py  mcp_proxy.py  siem_dispatch.py  splunk_hec.py  windows_eventlog.py
configs/: sentinel-policy-default.yaml
docs/: GSH_Framework_Whitepaper.md  index.html  robots.txt  sitemap.xml
playbooks/: hunt-001-agentic-loop-detection.md  hunt-002-ddi-tunneling-anomaly.md  hunt-003-model-poisoning-baseline.md  hunt-004-rogue-agent-detection.md  hunt-005-mcp-tool-poisoning.md
probes/: standardized-probe-set-v1.json
reporting/: sarif.py
scripts/: _cli_shims.py  ddi-log-parser-ai.py  gsh-baseline.py  gsh-mcp-proxy.py  gsh-probe-eval.py  gsh-sentinel-deploy.py  standardized-probe-set-v1.json
tests/: test_ddi_log_parser.py  test_duration_parsing.py  test_gsh_baseline.py  test_langchain_callback.py  test_mcp_proxy.py  test_siem_adapters.py  test_windows_eventlog.py
tests/fixtures/: mock_http_sink.py  mock_mcp_server.py
